--- a/crates/agentstate-server/Cargo.toml
+++ b/crates/agentstate-server/Cargo.toml
@@ -31,3 +31,10 @@ parking_lot = { workspace = true }
 axum-server = { version = "0.6", features = ["tls-rustls"] }
 rustls = "0.23"
 tokio-rustls = "0.25"
+once_cell = { workspace = true }
+prometheus = { workspace = true }
+futures = { workspace = true }
+async-stream = "0.3"
+opentelemetry = "0.23"
+opentelemetry-otlp = "0.16"
+tracing-opentelemetry = "0.24"
