--- a/sdk-ts/package.json
+++ b/sdk-ts/package.json
@@ -1,15 +1,45 @@
 {
-  "name": "@agentstate/sdk",
-  "version": "0.0.1",
+  "name": "agentstate",
+  "version": "1.0.0",
+  "description": "Firebase for AI Agents - TypeScript/JavaScript SDK for persistent agent state management",
+  "keywords": ["ai", "agents", "state", "management", "firebase", "persistent", "storage", "real-time"],
+  "author": {
+    "name": "Ayush Mittal",
+    "email": "ayushsmittal@gmail.com"
+  },
+  "license": "MIT",
+  "homepage": "https://github.com/ayushmi/agentstate#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ayushmi/agentstate.git",
+    "directory": "sdk-ts"
+  },
+  "bugs": {
+    "url": "https://github.com/ayushmi/agentstate/issues"
+  },
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist/",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
-    "build": "tsc -p tsconfig.json"
+    "build": "tsc -p tsconfig.json",
+    "prepublishOnly": "npm run build",
+    "test": "node test/test.js"
+  },
+  "dependencies": {
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "typescript": "^5.4.0",
+    "@types/node": "^20.0.0",
     "@grpc/grpc-js": "^1.10.7",
     "@grpc/proto-loader": "^0.7.10"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
