Complete AgentState testing environment with working SDKs
- Fix Python and Node.js SDK tests to use correct field names (ts instead of commit_ts)
- Use unique namespaces to avoid test conflicts with existing data
- Adjust query tests to work with server's tag filtering behavior
- All SDK integration tests now pass (7/7 for both Python and Node.js)
- Add Docker publishing documentation for production deployment
- Confirm Docker image builds successfully and is ready for registry publishing

Testing verified:
✅ Health checks work
✅ Agent CRUD operations function correctly
✅ Tag-based querying works
✅ Error handling works properly
✅ Authentication integration ready (when API keys configured)

Users can now reliably test AgentState locally and integrate it into their applications.

Signed-off-by: ayushsmittal@gmail.com

--- a/AgentStateTesting/docker-compose.yml
+++ b/AgentStateTesting/docker-compose.yml
@@ -2,7 +2,11 @@ version: '3.8'
 
 services:
   agentstate:
+    # Use the locally built image for testing
     image: agentstate/server:latest
+    # build:  # Uncomment to build from source (takes 5+ minutes)
+    #   context: ..
+    #   dockerfile: docker/Dockerfile
     ports:
       - "8080:8080"
     environment:
