Publish AgentState Docker image and update references
- Successfully pushed ayushmi/agentstate:latest and ayushmi/agentstate:1.0.0 to Docker Hub
- Updated docker-compose.yml to use published image instead of local build
- Fixed all documentation to use correct ayushmi/agentstate organization
- Verified published image works correctly with health check
- Users can now run: docker run -p 8080:8080 ayushmi/agentstate:latest

Docker Hub: https://hub.docker.com/r/ayushmi/agentstate
Image size: 52MB (optimized distroless)
Ready for production deployment!

Signed-off-by: ayushsmittal@gmail.com

--- a/AgentStateTesting/docker-compose.yml
+++ b/AgentStateTesting/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.8'
 
 services:
   agentstate:
-    # Use the locally built image for testing
-    image: agentstate/server:latest
+    # Use the published Docker image
+    image: ayushmi/agentstate:latest
     # build:  # Uncomment to build from source (takes 5+ minutes)
     #   context: ..
     #   dockerfile: docker/Dockerfile
