Fix LangChain imports for 0.1.0+ compatibility
- Add langchain-core to requirements.txt
- Update imports to use langchain_core for messages and chat_history
- Add fallback imports for compatibility with different LangChain versions
- Use Tool instead of DynamicTool for broader compatibility
- Fix bare except clause to use Exception
- Ensure LangChain example works with modern LangChain packages

Resolves import issues in langchain_agentstate_demo.py

Signed-off-by: ayushsmittal@gmail.com

--- a/AgentStateTesting/python-tests/requirements.txt
+++ b/AgentStateTesting/python-tests/requirements.txt
@@ -8,6 +8,7 @@ requests>=2.31.0
 
 # Popular agentic frameworks for testing integration
 langchain>=0.1.0
+langchain-core>=0.1.0
 langchain-openai>=0.0.5
 langchain-community>=0.0.10
 crewai>=0.20.0
