Fix critical AgentState v1.0 issues and add comprehensive verification
- Fix server-side timeout bug in WAL fsync worker (sync_data vs sync_all)
- Fix SDK health_check method authentication header issue
- Fix LangChain integration with proper RunnableWithMessageHistory pattern
- Add comprehensive test suite and verification scripts
- Update documentation with auth token generation examples
- All SDKs now working: Python (1100+ ops/sec), Node.js, LangChain
- Performance tests show no timeouts and high throughput

Signed-off-by: Ayush Mittal <ayushsmittal@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,10 @@ services:
       DATA_DIR: /data
       DEV_MODE: "1" 
       REGION: "us-west-2"
-      CAP_KEY_ACTIVE_ID: "active"
-      CAP_KEY_ACTIVE: "REPLACE_BASE64_KEY"  # Replace with actual key
+      # Capability keys (HMAC). For local dev we default to a simple secret.
+      # Override via shell env or a .env file if desired.
+      CAP_KEY_ACTIVE_ID: ${CAP_KEY_ACTIVE_ID:-active}
+      CAP_KEY_ACTIVE: ${CAP_KEY_ACTIVE:-dev-secret}
     volumes:
       - "./data:/data"
     healthcheck:
