--- a/AgentStateTesting/docker-compose.yml
+++ b/AgentStateTesting/docker-compose.yml
@@ -3,10 +3,10 @@ version: '3.8'
 services:
   agentstate:
     # Use the published Docker image
-    image: ayushmi/agentstate:latest
-    # build:  # Uncomment to build from source (takes 5+ minutes)
-    #   context: ..
-    #   dockerfile: docker/Dockerfile
+    # image: ayushmi/agentstate:latest
+    build:  # Build from source for debugging
+      context: ..
+      dockerfile: docker/Dockerfile
     ports:
       - "8080:8080"
     environment:
