--- a/examples/quickstart/package.json
+++ b/examples/quickstart/package.json
@@ -1,5 +1,8 @@
 {
+  "name": "agentstate-quickstart",
+  "version": "1.0.0",
+  "description": "Quick start examples for AgentState SDK",
   "dependencies": {
-    "axios": "^1.11.0"
+    "agentstate": "^1.0.2"
   }
 }
