--- a/.github/workflows/chaos-ci.yml
+++ b/.github/workflows/chaos-ci.yml
@@ -22,6 +22,11 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Install Python deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
+
       - name: Build and run chaos stack
         run: |
           docker version
@@ -44,4 +49,3 @@ jobs:
         if: always()
         run: |
           docker compose -f docker-compose.yml -f AgentStateTesting/chaos/docker-compose.chaos.yml down -v || true
-
